updateBookmarkedNoteCount function created and working

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               Bookmarked Notes
             </h2>
 
-            <div class="note-count" id="bookmarked-count"></div>
+            <div class="bookmarked-note-count" id="bookmarked-count"></div>
 
           </div>
 
