added 2 new btns

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <h1 class="header-title">Your Notes</h1>
 
         <div class="header-btn-wrapper">
+          <button class="btn-sort-alphabetically" type="button"><i class="ri-line-height"></i></button>
+          <button class="btn-change-view" type="button"><i class="ri-eye-line"></i></button>
           <button class="btn-new-tag" type="button"><i class="ri-price-tag-3-line"></i></button>
           <button class="btn-new-note" type="button"><i class="ri-sticky-note-add-line"></i></button>
         </div>
