--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
 
         <h1 class="header-title">Your Notes</h1>
 
-        <div class="header-btn-wrapper">
-          <button class="btn-sort-alphabetically" type="button"><i class="ri-line-height"></i></button>
-          <button class="btn-change-view" type="button"><i class="ri-eye-line"></i></button>
-          <button class="btn-new-tag" type="button"><i class="ri-price-tag-3-line"></i></button>
-          <button class="btn-new-note" type="button"><i class="ri-sticky-note-add-line"></i></button>
-        </div>
+          <div class="header-btn-wrapper">
+            <button class="btn-filter-by-tag" type="button"><i class="ri-price-tag-3-line"></i></button>
+            <button class="btn-filter-by-priority" type="button"><i class="ri-sort-alphabet-asc"></i></i></button>
+            <button class="btn-sort-by-date" type="button"><i class="ri-calendar-line"></i></button>
+            <button class="btn-sort-alphabetically" type="button"><i class="ri-line-height"></i></button>
+            <button class="btn-change-view" type="button"><i class="ri-eye-line"></i></button>
+            <button class="btn-new-tag" type="button"><i class="ri-price-tag-3-line"></i></button>
+            <button class="btn-new-note" type="button"><i class="ri-sticky-note-add-line"></i></button>
+          </div>
 
       </div>
 
