--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 
     <div class="note-app">
 
-      <div class="container header">
+      <div class="main">
 
-        <h1 class="header-title">Your Notes</h1>
+        <div class="container header">
+
+          <h1 class="header-title">Your Notes</h1>
 
           <div class="header-btn-wrapper">
             <button class="btn-filter-by-tag" type="button"><i class="ri-price-tag-3-line"></i></button>
@@ -33,54 +35,205 @@
             <button class="btn-new-note" type="button"><i class="ri-sticky-note-add-line"></i></button>
           </div>
 
-      </div>
+        </div>
 
-      <div class="container note-wrapper">
+        <div class="container note-wrapper">
 
-        <div class="category">
+          <div class="category">
 
-          <div class="category__details">
+            <div class="category__details">
 
-            <h2 class="category__header">
-              <span class="category__dropdown-btn"><svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                     viewBox="0 0 24 24"
-                     stroke-width="1.5" stroke="currentColor"
-                     class="size-6">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
-                </svg>
-              </span>
-              Notes
-            </h2>
+              <h2 class="category__header">
+                <span class="category__dropdown-btn"><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                       viewBox="0 0 24 24"
+                       stroke-width="1.5" stroke="currentColor"
+                       class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
+                  </svg>
+                </span>
+                Notes
+              </h2>
 
-            <div class="note-count" id="unbookmarked-count"></div>
+              <div class="note-count" id="unbookmarked-count"></div>
+
+            </div>
+
+            <div class="notes-list"></div>
 
           </div>
 
-          <div class="notes-list"></div>
+          <div class="category">
+
+            <div class="category__details">
+
+              <h2 class="category__header">
+                <span class="category__dropdown-btn"><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                       viewBox="0 0 24 24"
+                       stroke-width="1.5" stroke="currentColor"
+                       class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
+                  </svg>
+                </span>
+                Bookmarked Notes
+              </h2>
+
+              <div class="bookmarked-note-count" id="bookmarked-count"></div>
+
+            </div>
+
+            <div class="bookmarked-notes-list"></div>
+
+          </div>
 
         </div>
 
-        <div class="category">
+      </div>
 
-          <div class="category__details">
+      <div class="container sidebar">
 
-            <h2 class="category__header">
-              <span class="category__dropdown-btn"><svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                     viewBox="0 0 24 24"
-                     stroke-width="1.5" stroke="currentColor"
-                     class="size-6">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
-                </svg>
-              </span>
-              Bookmarked Notes
-            </h2>
+        <div class="sidebar__options">
 
-            <div class="bookmarked-note-count" id="bookmarked-count"></div>
+          <button class="btn-toggle-options" type="button"><i class="ri-menu-line"></i></button>
+
+        </div>
+
+        <div class="sidebar-view">
+
+          <div class="sidebar__priority">
+
+            <div class="category__details">
+
+              <h2 class="category__header">
+                <span class="category__dropdown-btn"><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                       viewBox="0 0 24 24"
+                       stroke-width="1.5" stroke="currentColor"
+                       class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
+                  </svg>
+                </span>
+                Priorities
+              </h2>
+
+              <div class="priority-count"></div>
+
+            </div>
+
+            <ul class="sidebar__priority-list">
+
+              <li class="sidebar__priority-item"><i class="ri-price-tag-3-fill"></i>Priority 1</li>
+
+              <li class="sidebar__priority-item"><i class="ri-price-tag-3-fill"></i>Priority 2</li>
+
+              <li class="sidebar__priority-item"><i class="ri-price-tag-3-fill"></i>Priority 3</li>
+
+              <li class="sidebar__priority-item"><i class="ri-price-tag-3-fill"></i>Priority 4</li>
+
+            </ul>
 
           </div>
 
-          <div class="bookmarked-notes-list"></div>
+          <div class="sidebar__tag">
 
+            <div class="category__details">
+
+              <h2 class="category__header">
+                <span class="category__dropdown-btn"><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                       viewBox="0 0 24 24"
+                       stroke-width="1.5" stroke="currentColor"
+                       class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
+                  </svg>
+                </span>
+                Tags
+              </h2>
+
+              <div class="tag-count"></div>
+
+            </div>
+
+            <ul class="sidebar__tag-list">
+
+              <!-- <li class="sidebar__tag-item"><i class="ri-price-tag-3-fill"></i>Tag 1</li>
+
+              <li class="sidebar__tag-item"><i class="ri-price-tag-3-fill"></i>Tag 2</li>
+
+              <li class="sidebar__tag-item"><i class="ri-price-tag-3-fill"></i>Tag 3</li>
+
+              <li class="sidebar__tag-item"><i class="ri-price-tag-3-fill"></i>Tag 4</li> -->
+
+            </ul>
+
+          </div>
+
+        </div>
+
+
+        <div class="filter">
+          <header class="filter__header">
+            <div class="filter__view-selector">
+              <span class="filter__view-label">View:</span>
+              <button class="filter__view-btn filter__view-btn--active" data="list">List</button>
+              <button class="filter__view-btn" data="board">Board</button>
+              <button class="filter__view-btn" data="calendar">Calendar</button>
+            </div>
+            <div class="filter__toggle-completed">
+              <label for="completed-tasks" class="filter__toggle-label">
+                <input type="checkbox" id="completed-tasks" class="filter__toggle-input" />
+                Completed tasks
+              </label>
+            </div>
+          </header>
+
+          <section class="filter__options">
+            <div class="filter__sort">
+              <h3 class="filter__section-title">Sort by</h3>
+              <div class="filter__grouping">
+                <label for="grouping" class="filter__label">Grouping</label>
+                <select id="grouping" class="filter__select">
+                  <option value="none">None (default)</option>
+                </select>
+              </div>
+              <div class="filter__sorting">
+                <label for="sorting" class="filter__label">Sorting</label>
+                <select id="sorting" class="filter__select">
+                  <option value="date-added">Date added</option>
+                </select>
+              </div>
+              <div class="filter__direction">
+                <label for="direction" class="filter__label">Direction</label>
+                <select id="direction" class="filter__select">
+                  <option value="ascending">Ascending (default)</option>
+                  <option value="descending">Descending</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="filter__filter-by">
+              <h3 class="filter__section-title">filter by</h3>
+              <div class="filter__due-date">
+                <label for="due-date" class="filter__label">Due date</label>
+                <select id="due-date" class="filter__select">
+                  <option value="all">All (default)</option>
+                </select>
+              </div>
+              <div class="filter__priority">
+                <label for="priority" class="filter__label">Priority</label>
+                <select id="priority" class="filter__select">
+                  <option value="all">All (default)</option>
+                </select>
+              </div>
+              <div class="filter__label-filter">
+                <label for="label" class="filter__label">Label</label>
+                <select id="label" class="filter__select">
+                  <option value="all">All (default)</option>
+                </select>
+              </div>
+            </div>
+          </section>
+
+          <footer class="filter__footer">
+            <button class="filter__reset-btn">Reset all</button>
+          </footer>
         </div>
 
       </div>
