removed reset btn

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                       <label class="custom__label">Date</label>
                     </div>
                     <div class="custom__select">
-                      <div class="custom__select-trigger" id="date-trigger">Latest (default)</div>
+                      <div class="custom__select-trigger">Latest (default)</div>
                       <ul class="custom__select-options hidden">
                         <li class="custom__select-choice" data-value="latest-date">Latest (default)</li>
                         <li class="custom__select-choice" data-value="oldest-date">Oldest</li>
@@ -104,9 +104,6 @@
 
               </section>
 
-              <footer class="custom__footer">
-                <button class="custom__reset-btn">Reset all</button>
-              </footer>
             </div>
 
           </div>
