--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                   </div>
 
                   <div class="custom__view-btn-wrapper">
-                    <button class="custom__view-btn" data="list"><i
+                    <button class="custom__view-btn" type="button" data="list"><i
                          class="ri-list-view"></i>List</button>
-                    <button class="custom__view-btn" data="grid"><i class="ri-layout-grid-line"></i>Grid</button>
+                    <button class="custom__view-btn" type="button" data="grid"><i class="ri-layout-grid-line"></i>Grid</button>
                   </div>
 
                 </div>
@@ -59,45 +59,59 @@
                 <div class="custom__sort-main">
 
                   <div class="custom__sort-options">
+
                     <div>
                       <i class="ri-calendar-line"></i>
                       <label class="custom__label">Date</label>
                     </div>
+
                     <div class="custom__select">
+
                       <div class="custom__select-trigger">Latest (default)</div>
                       <ul class="custom__select-options hidden">
                         <li class="custom__select-choice" data-value="latest-date">Latest (default)</li>
                         <li class="custom__select-choice" data-value="oldest-date">Oldest</li>
                       </ul>
+
                     </div>
+
                   </div>
 
                   <div class="custom__sort-options">
+                    
                     <div>
                       <i class="ri-sort-alphabet-desc"></i>
                       <label class="custom__label">Name</label>
                     </div>
+
                     <div class="custom__select">
+
                       <div class="custom__select-trigger">Ascending (default)</div>
                       <ul class="custom__select-options hidden">
                         <li class="custom__select-choice" data-value="ascending-name">Ascending (default)</li>
                         <li class="custom__select-choice" data-value="descending-name">Descending</li>
                       </ul>
+
                     </div>
+
                   </div>
 
                   <div class="custom__sort-options">
+
                     <div>
                       <i class="ri-sort-number-asc"></i>
                       <label class="custom__label">Priority</label>
                     </div>
+
                     <div class="custom__select">
+
                       <div class="custom__select-trigger">Descending (default)</div>
                       <ul class="custom__select-options hidden">
                         <li class="custom__select-choice" data-value="descending-priority">Descending (default)</li>
                         <li class="custom__select-choice" data-value="ascending-priority">Ascending</li>
                       </ul>
                     </div>
+
                   </div>
 
                 </div>
