removed a redundant container

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                   <div class="custom__view-btn-wrapper">
                     <button class="custom__view-btn" type="button" data="list"><i
                          class="ri-list-view"></i>List</button>
-                    <button class="custom__view-btn" type="button" data="grid"><i class="ri-layout-grid-line"></i>Grid</button>
+                    <button class="custom__view-btn" type="button" data="grid"><i
+                         class="ri-layout-grid-line"></i>Grid</button>
                   </div>
 
                 </div>
@@ -78,7 +79,7 @@
                   </div>
 
                   <div class="custom__sort-options">
-                    
+
                     <div>
                       <i class="ri-sort-alphabet-desc"></i>
                       <label class="custom__label">Name</label>
@@ -180,35 +181,31 @@
 
         <div class="sidebar">
 
-          <div class="sidebar-view">
+          <div class="sidebar__priority">
 
-            <div class="sidebar__priority">
+            <h2 class="sidebar__header">Priorities</h2>
 
-              <h2 class="sidebar__header">Priorities</h2>
+            <ul class="sidebar__priority-list">
 
-              <ul class="sidebar__priority-list">
+              <li class="sidebar__priority-item"><i class="ri-price-tag-3-fill"></i>Priority 1</li>
 
-                <li class="sidebar__priority-item"><i class="ri-price-tag-3-fill"></i>Priority 1</li>
+              <li class="sidebar__priority-item"><i class="ri-price-tag-3-fill"></i>Priority 2</li>
 
-                <li class="sidebar__priority-item"><i class="ri-price-tag-3-fill"></i>Priority 2</li>
+              <li class="sidebar__priority-item"><i class="ri-price-tag-3-fill"></i>Priority 3</li>
 
-                <li class="sidebar__priority-item"><i class="ri-price-tag-3-fill"></i>Priority 3</li>
+              <li class="sidebar__priority-item"><i class="ri-price-tag-3-fill"></i>Priority 4</li>
 
-                <li class="sidebar__priority-item"><i class="ri-price-tag-3-fill"></i>Priority 4</li>
+            </ul>
 
-              </ul>
+          </div>
 
-            </div>
+          <div class="sidebar__tag">
 
-            <div class="sidebar__tag">
+            <h2 class="sidebar__header">Tags</h2>
 
-              <h2 class="sidebar__header">Tags</h2>
+            <ul class="sidebar__tag-list">
 
-              <ul class="sidebar__tag-list">
-
-              </ul>
-
-            </div>
+            </ul>
 
           </div>
 
