--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@
 
             <ul class="sidebar__priority-list">
 
-              <li class="sidebar__priority-item"><i class="ri-price-tag-3-fill"></i>Priority 1</li>
+              <li class="sidebar__priority-item"><i class="ri-circle-fill"></i></i>Priority 1</li>
 
-              <li class="sidebar__priority-item"><i class="ri-price-tag-3-fill"></i>Priority 2</li>
+              <li class="sidebar__priority-item"><i class="ri-circle-fill"></i></i>Priority 2</li>
 
-              <li class="sidebar__priority-item"><i class="ri-price-tag-3-fill"></i>Priority 3</li>
+              <li class="sidebar__priority-item"><i class="ri-circle-fill"></i></i>Priority 3</li>
 
-              <li class="sidebar__priority-item"><i class="ri-price-tag-3-fill"></i>Priority 4</li>
+              <li class="sidebar__priority-item"><i class="ri-circle-fill"></i></i>Priority 4</li>
 
             </ul>
 
