colors for the bookmark icons changed to match the others

--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@
 
             <ul class="sidebar__priority-list">
 
-              <li class="sidebar__priority-item"><i class="ri-circle-fill"></i></i>Priority 1</li>
+              <li class="sidebar__priority-item red-p1"><i class="ri-circle-fill"></i></i>Priority 1</li>
 
-              <li class="sidebar__priority-item"><i class="ri-circle-fill"></i></i>Priority 2</li>
+              <li class="sidebar__priority-item orange-p2"><i class="ri-circle-fill"></i></i>Priority 2</li>
 
-              <li class="sidebar__priority-item"><i class="ri-circle-fill"></i></i>Priority 3</li>
+              <li class="sidebar__priority-item yellow-p3"><i class="ri-circle-fill"></i></i>Priority 3</li>
 
-              <li class="sidebar__priority-item"><i class="ri-circle-fill"></i></i>Priority 4</li>
+              <li class="sidebar__priority-item blue-p4"><i class="ri-circle-fill"></i></i>Priority 4</li>
 
             </ul>
 
