--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
           rel="stylesheet">
     <script type="module" src="/scripts/main.js"></script>
-    <script src="/scripts/app.js" defer></script>
+    <!-- <script src="/scripts/app.js" defer></script> -->
     <title>Notepad v2</title>
   </head>
 
