--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
           rel="stylesheet">
-    <script type="module" src="/scripts/main.js"></script>
-    <!-- <script src="/scripts/app.js" defer></script> -->
+    <script type="module" src="/src/scripts/main.js"></script>
     <title>Notepad v2</title>
   </head>
 
