changed the naming for the sorting options for clarity

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 
                     <div class="custom__select">
 
-                      <div class="custom__select-trigger">Latest (default)</div>
+                      <div class="custom__select-trigger">Not set</div>
                       <ul class="custom__select-options hidden">
-                        <li class="custom__select-choice" data-value="latest-date">Latest (default)</li>
-                        <li class="custom__select-choice" data-value="oldest-date">Oldest</li>
+                        <li class="custom__select-choice" data-value="latest-date">Newest to Oldest</li>
+                        <li class="custom__select-choice" data-value="oldest-date">Oldest to Newest</li>
                       </ul>
 
                     </div>
@@ -86,10 +86,10 @@
 
                     <div class="custom__select">
 
-                      <div class="custom__select-trigger">Ascending (default)</div>
+                      <div class="custom__select-trigger">Not set</div>
                       <ul class="custom__select-options hidden">
-                        <li class="custom__select-choice" data-value="ascending-name">Ascending (default)</li>
-                        <li class="custom__select-choice" data-value="descending-name">Descending</li>
+                        <li class="custom__select-choice" data-value="ascending-name">Ascending (Z-A)</li>
+                        <li class="custom__select-choice" data-value="descending-name">Descending (A-Z)</li>
                       </ul>
 
                     </div>
@@ -105,10 +105,10 @@
 
                     <div class="custom__select">
 
-                      <div class="custom__select-trigger">Descending (default)</div>
+                      <div class="custom__select-trigger">Not set</div>
                       <ul class="custom__select-options hidden">
-                        <li class="custom__select-choice" data-value="descending-priority">Descending (default)</li>
-                        <li class="custom__select-choice" data-value="ascending-priority">Ascending</li>
+                        <li class="custom__select-choice" data-value="descending-priority">Descending (1-9)</li>
+                        <li class="custom__select-choice" data-value="ascending-priority">Ascending (9-1)</li>
                       </ul>
                     </div>
 
