made the grid view the default

--- a/index.html
+++ b/index.html
@@ -24,14 +24,10 @@
 
         <div class="navbar__btn-wrapper">
 
-          <button class="btn-new-tag" type="button"><i class="ri-price-tag-3-line"></i></button>
-          <button class="btn-new-note" type="button"><i class="ri-sticky-note-add-line"></i></button>
+            <div class="notes-list grid-layout">
 
-          <div class="btn-toggle-options-wrapper">
 
-            <button class="btn-toggle-options" type="button"><i class="ri-menu-line"></i></button>
-
-            <div class="custom" data-toggle="visibility">
+            <div class="bookmarked-notes-list grid-layout"></div>
 
               <header class="custom__top">
 
