improved responsiveness + minor style changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 
       <div class="navbar">
 
-        <h1 class="navbar__title">Inbox</h1>
+        <div class="navbar__logo">
+          <i class="ri-account-circle-line"></i>
+        </div>
+        
+        <!-- <h1 class="navbar__title">Chronos App</h1> -->
 
         <div class="navbar__btn-wrapper">
 
